--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html> 
     <head>
         <meta charset="utf-8">
-        <title>Título del post</title>
+        <title>Bienvenido al Sitio</title>
         <link rel="stylesheet" href="css/fuentes.css">
     </head>
       
